# emerlin2caom

./: Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
blank2caom2/: __init__.py  composable.py  file2caom2_augmentation.py  main_app.py
blank2caom2/tests/: test_caom_gen_visit.py  test_composable.py  test_storage_name.py
blank2caom2/tests/data/: config.yml
config/: config.yml  state.yml
emerlin2caom2/: .main_app.py.swp  __init__.py  api_requests.py  astro_composable_ms.py  casa_reader.py  composable.py  configuration.py  data_util.py  file2caom2_augmentation.py  file_metadata.py  fits_reader.py  inputs_parser.py  main_app.py  manage_composable_ms.py  measurement_set_metadata.py  reader_composable_ms.py  run_script.py  settings_file.py  test.py
emerlin2caom2/data/: test_fits.py
emerlin2caom2/old_code/: astro_composable_ms.py  data_util.py  manage_composable_ms.py  reader_composable_ms.py
emerlin2caom2/tests/: conftest.py  test_api_requests.py  test_caom_gen_visit.py  test_casa_reader.py  test_composable.py  test_file_metadata.py  test_fits_reader.py  test_storage_name.py
output_xml/: TS8004_C_001_20190801.xml  TS8004_C_001_20190801_avg.actual.xml
scripts/: blank_run.sh  blank_run_incremental.sh  config.yml  docker-entrypoint.sh  emerlin_run.sh  emerlin_run_incremental.sh  rootCA.pem
